--- a/sass/style.css
+++ b/sass/style.css
@@ -341,6 +341,9 @@ ul {
 .navigation--box--topline--basket {
   display: none; }
 
+.navigationtabs--tabs li a {
+  font-weight: 600; }
+
 .main__wrapper {
   width: 100%;
   display: block;
@@ -1023,7 +1026,10 @@ ul {
       font-size: 14px;
       font-family: "ProximaNovaRegular"; }
 
-@media only screen and (max-width: 1025px) {
+@media only screen and (max-width: 1111px) {
+  .navigation--box--contacts--city {
+    display: none !important; } }
+@media only screen and (max-width: 1040px) {
   .basket__content--item {
     height: 165px; }
 
@@ -1054,10 +1060,7 @@ ul {
     margin: 0 0px 5px 0; }
 
   .navigation--box--contacts a {
-    margin: 0 0 0 10px; }
-
-  .navigation--box--contacts--city {
-    display: none !important; } }
+    margin: 0 0 0 10px; } }
 @media only screen and (max-width: 770px) {
   .align-left {
     text-align: center; }
