--- a/sass/style.css
+++ b/sass/style.css
@@ -1028,7 +1028,34 @@ ul {
 
 @media only screen and (max-width: 1111px) {
   .navigation--box--contacts--city {
-    display: none !important; } }
+    display: none !important; }
+
+  .product {
+    text-align: center;
+    display: block;
+    float: left;
+    width: 100%; }
+
+  .product h1 {
+    font-weight: 700;
+    text-transform: uppercase;
+    font-family: "ProximaNovaRegular";
+    font-size: 30px;
+    color: #000;
+    display: block;
+    float: left;
+    width: 100%; }
+
+  .product--item, .recomend, .recomend h1 {
+    display: block;
+    float: left;
+    width: 100%; }
+
+  .product--ingredients {
+    display: block;
+    margin-bottom: 30px;
+    float: left;
+    width: 100%; } }
 @media only screen and (max-width: 1040px) {
   .basket__content--item {
     height: 165px; }
@@ -1341,7 +1368,14 @@ ul {
     vertical-align: top; }
 
   .categoryitems__item a {
-    height: 62px; } }
+    height: 62px; }
+
+  .categoryitems__item img {
+    height: auto !important; }
+
+  .product--item__thumb {
+    max-width: 100% !important;
+    height: auto; } }
 @media only screen and (max-width: 320px) {
   .social-media {
     -webkit-background-size: cover;
@@ -1358,6 +1392,9 @@ ul {
     margin-left: 20%; }
 
   .navigation--navline--active {
-    margin-left: -10%; } }
+    margin-left: -10%; }
+
+  .categoryitems__item a {
+    font-size: 18px !important; } }
 
 /*# sourceMappingURL=style.css.map */
