Страница page  форма обратной связи

--- a/sass/responsive/_style.scss
+++ b/sass/responsive/_style.scss
@@ -301,6 +301,9 @@
 	.navigationtabs--tabs li {
 	    margin-right: 0!important;
 	}
+	.templatepage__input--small {
+		width: 96%;
+	}
 }
 
 @media only screen and (max-width: 500px) {
