--- a/sass/style.css
+++ b/sass/style.css
@@ -53,44 +53,44 @@
       transform: scale(1.4);
       opacity: 1; }
 
-.reviews .slick-slider-item {
+.reviews .slick-slider-item, .templatepage .slick-slider-item {
   outline: none; }
-.reviews .slick-initialized .slick-slide {
+.reviews .slick-initialized .slick-slide, .templatepage .slick-initialized .slick-slide {
   outline: none; }
-.reviews .slick-next {
+.reviews .slick-next, .templatepage .slick-next {
   right: 150px;
   color: #EF4036;
   z-index: 999; }
-.reviews .slick-prev {
+.reviews .slick-prev, .templatepage .slick-prev {
   left: 150px;
   color: #EF4036;
   z-index: 999; }
-.reviews i.fa.fa-chevron-right.slick-arrow {
+.reviews i.fa.fa-chevron-right.slick-arrow, .templatepage i.fa.fa-chevron-right.slick-arrow {
   position: absolute;
   right: 45%;
   bottom: -3px;
   color: #EF4036;
   cursor: pointer;
   z-index: 99; }
-.reviews i.fa.fa-chevron-left.slick-arrow {
+.reviews i.fa.fa-chevron-left.slick-arrow, .templatepage i.fa.fa-chevron-left.slick-arrow {
   position: absolute;
   left: 45%;
   color: #EF4036;
   cursor: pointer;
   bottom: -3px;
   z-index: 99; }
-.reviews .slick-slider {
+.reviews .slick-slider, .templatepage .slick-slider {
   margin-bottom: 0; }
-.reviews .slick-dots {
+.reviews .slick-dots, .templatepage .slick-dots {
   z-index: -1;
   bottom: -10px; }
-  .reviews .slick-dots li {
+  .reviews .slick-dots li, .templatepage .slick-dots li {
     width: 10px;
     height: 10px; }
-    .reviews .slick-dots li button {
+    .reviews .slick-dots li button, .templatepage .slick-dots li button {
       width: 10px;
       height: 10px; }
-      .reviews .slick-dots li button:before {
+      .reviews .slick-dots li button:before, .templatepage .slick-dots li button:before {
         font-size: 0;
         width: 10px;
         height: 10px;
@@ -106,10 +106,10 @@
         -ms-transition: all 0.2s linear;
         -o-transition: all 0.2s linear;
         transition: all 0.2s linear; }
-  .reviews .slick-dots li.slick-active button {
+  .reviews .slick-dots li.slick-active button, .templatepage .slick-dots li.slick-active button {
     width: 10px;
     height: 10px; }
-    .reviews .slick-dots li.slick-active button:before {
+    .reviews .slick-dots li.slick-active button:before, .templatepage .slick-dots li.slick-active button:before {
       background-color: #EF4036;
       opacity: 1;
       border: 1px solid #EF4036; }
@@ -545,13 +545,13 @@ ul {
       border-radius: 20px;
       border: 2px solid #263A47; }
 
-.reviews {
+.reviews, .templatepage {
   display: block;
   float: left;
   width: 100%;
   position: relative;
   padding: 50px 0; }
-  .reviews h1 {
+  .reviews h1, .templatepage h1 {
     text-transform: uppercase;
     color: #000;
     text-align: center;
@@ -992,6 +992,101 @@ ul {
 .basket--width--active {
   display: block; }
 
+.templatepage__input--small {
+  display: block;
+  float: left;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px 15px;
+  -webkit-border-radius: 11px;
+  -moz-border-radius: 11px;
+  -ms-border-radius: 11px;
+  border-radius: 11px;
+  margin: 15px 2%;
+  width: 46%;
+  font-size: 16px;
+  font-weight: 700;
+  color: #7F7F7F;
+  font-family: "ProximaNovaRegular";
+  outline: none;
+  border: 1px solid #7F7F7F; }
+  .templatepage__input--small:before, .templatepage__input--small:after {
+    display: table;
+    content: " "; }
+  .templatepage__input--small:after {
+    clear: both; }
+.templatepage__text {
+  display: block;
+  float: left;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px 15px;
+  -webkit-border-radius: 11px;
+  -moz-border-radius: 11px;
+  -ms-border-radius: 11px;
+  border-radius: 11px;
+  margin: 15px 2%;
+  width: 96%;
+  font-size: 16px;
+  font-weight: 700;
+  color: #7F7F7F;
+  font-family: "ProximaNovaRegular";
+  outline: none;
+  border: 1px solid #7F7F7F;
+  height: 150px;
+  resize: none; }
+  .templatepage__text:before, .templatepage__text:after {
+    display: table;
+    content: " "; }
+  .templatepage__text:after {
+    clear: both; }
+.templatepage p {
+  font-family: "ProximaNovaRegular";
+  font-size: 14px;
+  font-weight: 700;
+  color: #7F7F7F; }
+.templatepage__input--submit {
+  display: block;
+  font-size: 15px;
+  color: #FFF;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 10px 15px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  border-radius: 12px;
+  -o-background-clip: padding-box;
+  background-clip: padding-box;
+  background-color: #ef3f35;
+  text-decoration: none;
+  margin: 15px auto;
+  font-weight: 700;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  outline: none;
+  border: none; }
+  .templatepage__input--submit:hover {
+    background-color: #df1d12;
+    text-decoration: none;
+    color: #fff; }
+.templatepage__form {
+  display: block;
+  float: left;
+  position: relative;
+  width: 100%; }
+.templatepage div.wpcf7 {
+  margin: 0 -2%; }
+.templatepage h1 {
+  margin-bottom: 15px; }
+
 .footer {
   display: block;
   float: left;
@@ -1135,10 +1230,10 @@ ul {
   .navigation--navline ul li:after {
     content: none; }
 
-  .reviews i.fa.fa-chevron-right.slick-arrow {
+  .reviews i.fa.fa-chevron-right.slick-arrow, .templatepage i.fa.fa-chevron-right.slick-arrow {
     right: 40%; }
 
-  .reviews i.fa.fa-chevron-left.slick-arrow {
+  .reviews i.fa.fa-chevron-left.slick-arrow, .templatepage i.fa.fa-chevron-left.slick-arrow {
     left: 40%; }
 
   .basket__head {
@@ -1252,10 +1347,10 @@ ul {
     width: 25%;
     margin-left: 15px; }
 
-  .reviews i.fa.fa-chevron-right.slick-arrow {
+  .reviews i.fa.fa-chevron-right.slick-arrow, .templatepage i.fa.fa-chevron-right.slick-arrow {
     right: 30%; }
 
-  .reviews i.fa.fa-chevron-left.slick-arrow {
+  .reviews i.fa.fa-chevron-left.slick-arrow, .templatepage i.fa.fa-chevron-left.slick-arrow {
     left: 30%; }
 
   .reviews__carousel__item {
@@ -1292,7 +1387,10 @@ ul {
     margin-right: 0; }
 
   .navigationtabs--tabs li {
-    margin-right: 0 !important; } }
+    margin-right: 0 !important; }
+
+  .templatepage__input--small {
+    width: 96%; } }
 @media only screen and (max-width: 500px) {
   .basket--width {
     display: none; }
