--- a/sass/style.css
+++ b/sass/style.css
@@ -140,6 +140,9 @@ ul {
 .align-right {
   text-align: right; }
 
+.content--row {
+  display: block; }
+
 .navigation {
   background-color: #2C2C2C;
   height: 110px;
@@ -368,10 +371,10 @@ ul {
       top: 50%;
       transform: translate(-50%, -50%); }
     .main__carousel--item img {
-      max-width: 150%;
-      max-height: 150%;
+      max-width: 300%;
+      max-height: 300%;
       width: auto;
-      height: 100%; }
+      height: auto; }
     .main__carousel--item--content {
       display: block;
       float: left;
@@ -1183,13 +1186,54 @@ ul {
     margin: 0 0px 5px 0; }
 
   .navigation--box--contacts a {
-    margin: 0 0 0 10px; } }
+    margin: 0 0 0 10px; }
+
+  .main__carousel--item img {
+    width: auto;
+    height: 100%; } }
+@media only screen and (max-width: 980px) {
+  .navigation--navline ul li a {
+    font-size: 14px; }
+
+  .basket__content--item--pricebox--counter p {
+    font-size: 12px; }
+
+  .basket__content--item--pricebox--counter .minus {
+    font-size: 8px;
+    padding-right: 8px; }
+
+  .basket__content--item--pricebox--counter .plus {
+    font-size: 8px;
+    padding-left: 8px; }
+
+  .basket__content--item--clear {
+    font-size: 10px; }
+
+  .basket__content--item--pricebox--price {
+    margin-right: 10px; } }
 @media only screen and (max-width: 770px) {
   .align-left {
     text-align: center; }
 
   .align-right {
     text-align: center; }
+
+  .basket__content--item--pricebox--price {
+    margin-right: 20px; }
+
+  .basket__content--item--pricebox--counter .plus {
+    font-size: 12px;
+    padding-left: 10px; }
+
+  .basket__content--item--clear {
+    font-size: 14px; }
+
+  .basket__content--item--pricebox--counter .minus {
+    font-size: 12px;
+    padding-right: 10px; }
+
+  .basket__content--item--pricebox--counter p {
+    font-size: 14px; }
 
   .navigation--box--contacts {
     width: 50%; }
