--- a/css/style-igor.css
+++ b/css/style-igor.css
@@ -4,8 +4,9 @@
     float: left;
     width: 100%;
     /*padding: 0 15px;*/
-    border-bottom: 1px solid #A0A0A0;
+    border-bottom: 1px solid #e5e5e5;
     margin-bottom: 50px;
+    margin-top: 35px;
 }
 
 
@@ -136,7 +137,8 @@
     max-height: 150px;
     display: block;
     max-width: 100%;
-    width: 80%;
+    width: auto;
+    height: auto;
 }
 
 .categoryitems__item--price{
