--- a/sass/content/_index.scss
+++ b/sass/content/_index.scss
@@ -204,6 +204,7 @@
 	width: 100%;
 	position: relative;
 	padding: 50px 0;
+	background-color: #FCFCFC;
 	h1 {
 		text-transform: uppercase;
 		color: #000;
@@ -336,10 +337,10 @@
 		position: absolute;
 		width: 100%;
 		background-color: #fff;
-		background: -moz-linear-gradient(top,rgba(255,255,245,0) 0,rgba(255,255,245,1) 38%);
-		background: -webkit-linear-gradient(top,rgba(255,245,255,0) 0,rgba(255,255,245,1) 38%);
-		background: -ms-linear-gradient(top,rgba(255,255,245,0) 0,rgba(255,255,245,1) 38%);
-		background: linear-gradient(top,rgba(255,255,245,0) 0,rgba(255,255,245,1) 38%);
+		background: -moz-linear-gradient(top,rgba(255,255,255,0) 0,rgba(255,255,255,1) 38%);
+		background: -webkit-linear-gradient(top,rgba(255,255,255,0) 0,rgba(255,255,255,1) 38%);
+		background: -ms-linear-gradient(top,rgba(255,255,255,0) 0,rgba(255,255,255,1) 38%);
+		background: linear-gradient(top,rgba(255,255,255,0) 0,rgba(255,255,255,1) 38%);
 		a {
 			font-size: 14px;
 			color: #EF4036;
