--- a/css/style-igor.css
+++ b/css/style-igor.css
@@ -366,3 +366,13 @@
     font-weight: 700;
     padding: 10px 0;
 }
+
+a.basket__foot--order--noactive {
+    -webkit-filter: grayscale(50%);
+    -moz-filter: grayscale(50%);
+    -ms-filter: grayscale(50%);
+    -o-filter: grayscale(50%);
+    filter: grayscale(50%);
+    filter: gray; /* IE 6-9 */  
+    opacity: 0.5;
+}
