--- a/sass/content/_sidebar.scss
+++ b/sass/content/_sidebar.scss
@@ -266,7 +266,7 @@
 				background-position: 10px 50%;
 				background-color: rgba(255, 255, 255, 0);
 				@include border-radius(11px);
-				margin: 5px 20px 15px 20px;
+				margin: 0 20px 15px 20px;
 				width: calc(100% - 40px);
 				font-size: 12px;
 		    	color: #7F7F7F;
@@ -279,12 +279,11 @@
 				display: block;
 				float: left;
 				position: relative;
-				margin: 5px 20px 15px 20px;
+				margin: 0 20px 15px 20px;
 				width: calc(100% - 40px);
 				height: 35px;
 				line-height: 35px;
 				@include border-radius(10px);
-				@include background-clip(padding-box);
 				background-color: rgba(255, 255, 255, 0);
 				color: #F14036;
 				text-align: center;
