--- a/sass/style.css
+++ b/sass/style.css
@@ -981,7 +981,7 @@ ul {
         -moz-border-radius: 11px;
         -ms-border-radius: 11px;
         border-radius: 11px;
-        margin: 5px 20px 15px 20px;
+        margin: 0 20px 15px 20px;
         width: calc(100% - 40px);
         font-size: 12px;
         color: #7F7F7F;
@@ -998,7 +998,7 @@ ul {
         display: block;
         float: left;
         position: relative;
-        margin: 5px 20px 15px 20px;
+        margin: 0 20px 15px 20px;
         width: calc(100% - 40px);
         height: 35px;
         line-height: 35px;
@@ -1006,8 +1006,6 @@ ul {
         -moz-border-radius: 10px;
         -ms-border-radius: 10px;
         border-radius: 10px;
-        -o-background-clip: padding-box;
-        background-clip: padding-box;
         background-color: rgba(255, 255, 255, 0);
         color: #F14036;
         text-align: center;
