--- a/sass/content/_sidebar.scss
+++ b/sass/content/_sidebar.scss
@@ -110,14 +110,22 @@
 		    border-bottom: 1px solid rgba(0,0,0,.1);
 		    position: relative;
 		    overflow: hidden;
-		    img {
-				position: absolute;
+		    &--thumb {
+		    	position: absolute;
 				right: -45px;
 				top: 15px;
 				border-radius: 50% 0 0 50%;
-				max-height: 90px;
-				max-width: 90px;
+				height: 90px;
+				width: 90px;
+				@include overflow-img;
+				background-color: #FFF;
+		    	img {
+					max-width: 100%;
+					height: auto;
+					
+			    }
 		    }
+		    
 		    &--title {
 		    	font-size: 16px;
 		    	font-family: $r;
